# Proportion-Game

./: CMakeLists.txt  main.cpp  readme.md
includes/constants/: windowConstants.h
includes/game/: game.cpp  game.h
includes/objects/: bouncingCircle.h  hoverableText.h
includes/random/: random.h
